# django-tiptap

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: docs.yml  pypi.yml
django_tiptap/: __init__.py  apps.py  conf.py  fields.py  widgets.py
django_tiptap/static/django_tiptap/js/: tiptap-init.js
django_tiptap/templates/django_tiptap/: widget.html
django_tiptap/templatetags/: django_tiptap_tags.py
docs/: conf.py  index.rst
example/: settings.py  urls.py
example/blog/: models.py
tests/: test_widget.py
